<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">ConvertIT</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="more"></string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>
    <string name="register">REGISTER</string>
    <string name="back">BACK</string>
    <string name="favorites">Favorites</string>
    <string name="converter">Converter</string>
    <string name="profile">Profile</string>
    <string name="getRates" translatable="false">GET RATES</string>
    <string name="login">LOGIN</string>
    <string name="loginPage">LOGIN PAGE</string>
    <string name="amount">Amount of Base Currency:</string>
    <string name="result">Result :</string>
    <string name="convertTo">CONVERT TO</string>
    <string name="convertFrom">CONVERT FROM:</string>
    <string name="convert">CONVERT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Language">Language</string>
    <string name="loggedout">Successfully Logged Out!</string>
    <string name="loggedin">Successfully Logged In!</string>
    <string name="welcomeText">Welcome to the ConvertIT </string>
    <string name="please">Please login to see preferences!</string>
    <string name="language">Choose Language:</string>
    <string name="cancel">Changing was cancelled</string>
    <string name="languageChanged">Language change was set</string>
    <string name="favoritesbutton">You can press long hold to currency that you want to add your favorites list. You can click to this button for going back favorites list.</string>
    <string name="newcurrency">To add new currency to your favorites list, you can click the currencies button.</string>
    <string name="welcomeText1">Welcome to the ConvertIT\nDear </string>
    <string name="welcomeText2">
            If you wish to log out,You can click to the power button!</string>
    <string name="pleaseLogin">Please login if you have registered,
            you can click to the power button to login or register!</string>
    <string name="selected"> selected</string>
    <string name="equals">  equals</string>
    <string name="permissionNeeded">Permission needed</string>
    <string name="neededBecause">This permission is needed because of to use database</string>
    <string name="granted">Permission GRANTED</string>
    <string name="denied">Permission DENIED</string>
    <string name="alreadyGranted">You have already granted this permission!</string>
    <string name="appLanguage">Choose app language:</string>
    <string name="deletedItem">Item deleted from favorites list!</string>
    <string name="downloading">Downloading favorites list...</string>
    <string name="crash">Database is crashed</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>

